y.output
Terminals which are not used

   PROPERTY


State 55 conflicts: 1 shift/reduce
State 56 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce
State 104 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce
State 106 conflicts: 14 shift/reduce
State 107 conflicts: 1 shift/reduce
State 108 conflicts: 1 shift/reduce
State 110 conflicts: 1 shift/reduce
State 129 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decls EOF

    2 decls: /* empty */
    3      | decls vdecl
    4      | decls fdecl

    5 fdecl: typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

    6 formals_opt: /* empty */
    7            | formal_list

    8 formal_list: typ ID
    9            | formal_list COMMA typ ID

   10 typ: INT
   11    | FLOAT
   12    | BOOL
   13    | VOID
   14    | STRING
   15    | CLUSTER
   16    | COLOR
   17    | typ LBRACKET RBRACKET

   18 vdecl_list: /* empty */
   19           | vdecl_list vdecl

   20 vdecl: typ ID SEMI

   21 stmt_list: /* empty */
   22          | stmt_list stmt

   23 stmt: expr SEMI
   24     | RETURN SEMI
   25     | RETURN expr SEMI
   26     | LBRACE stmt_list RBRACE
   27     | IF LPAREN expr RPAREN stmt
   28     | IF LPAREN expr RPAREN stmt ELSE stmt
   29     | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
   30     | WHILE LPAREN expr RPAREN stmt

   31 expr_opt: /* empty */
   32         | expr

   33 expr: LITERAL
   34     | STRINGLIT
   35     | TRUE
   36     | FALSE
   37     | POUND expr COMMA expr COMMA expr POUND
   38     | DOLLAR expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr DOLLAR
   39     | expr AT expr
   40     | ID
   41     | FLOATLIT
   42     | expr PLUS expr
   43     | expr MINUS expr
   44     | expr TIMES expr
   45     | expr DIVIDE expr
   46     | expr EQ expr
   47     | expr NEQ expr
   48     | expr LT expr
   49     | expr LEQ expr
   50     | expr GT expr
   51     | expr GEQ expr
   52     | expr AND expr
   53     | expr OR expr
   54     | expr DOT ID
   55     | expr DOT ID ASSIGN expr
   56     | MINUS expr
   57     | NOT expr
   58     | ID ASSIGN NEW typ LBRACKET expr RBRACKET
   59     | ID ASSIGN expr
   60     | ID LPAREN actuals_opt RPAREN
   61     | LPAREN expr RPAREN
   62     | ID LBRACKET expr RBRACKET ASSIGN expr
   63     | ID LBRACKET expr RBRACKET

   64 actuals_opt: /* empty */
   65            | actuals_list

   66 actuals_list: expr
   67             | actuals_list COMMA expr


Terminals, with rules where they appear

$end (0) 0
error (256)
SEMI (258) 20 23 24 25 29
LPAREN (259) 5 27 28 29 30 60 61
RPAREN (260) 5 27 28 29 30 60 61
LBRACE (261) 5 26
RBRACE (262) 5 26
COMMA (263) 9 37 38 67
PLUS (264) 42
MINUS (265) 43 56
TIMES (266) 44
DIVIDE (267) 45
ASSIGN (268) 55 58 59 62
NOT (269) 57
EQ (270) 46
NEQ (271) 47
LT (272) 48
LEQ (273) 49
GT (274) 50
GEQ (275) 51
TRUE (276) 35
FALSE (277) 36
AND (278) 52
OR (279) 53
RETURN (280) 24 25
IF (281) 27 28
ELSE (282) 28
FOR (283) 29
WHILE (284) 30
INT (285) 10
FLOAT (286) 11
BOOL (287) 12
VOID (288) 13
STRING (289) 14
LBRACKET (290) 17 58 62 63
RBRACKET (291) 17 58 62 63
COLOR (292) 16
CLUSTER (293) 15
NEW (294) 58
DOLLAR (295) 38
DOT (296) 54 55
POUND (297) 37
AT (298) 39
PROPERTY (299)
LITERAL (300) 33
ID (301) 5 8 9 20 40 54 55 58 59 60 62 63
FLOATLIT (302) 41
STRINGLIT (303) 34
EOF (304) 1
NOELSE (305)
NEG (306)


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1, on right: 0
decls (54)
    on left: 2 3 4, on right: 1 3 4
fdecl (55)
    on left: 5, on right: 4
formals_opt (56)
    on left: 6 7, on right: 5
formal_list (57)
    on left: 8 9, on right: 7 9
typ (58)
    on left: 10 11 12 13 14 15 16 17, on right: 5 8 9 17 20 58
vdecl_list (59)
    on left: 18 19, on right: 5 19
vdecl (60)
    on left: 20, on right: 3 19
stmt_list (61)
    on left: 21 22, on right: 5 22 26
stmt (62)
    on left: 23 24 25 26 27 28 29 30, on right: 22 27 28 29 30
expr_opt (63)
    on left: 31 32, on right: 29
expr (64)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55 56 57 58 59 60 61 62 63, on right: 23 25 27 28 29
    30 32 37 38 39 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59 61 62 63 66 67
actuals_opt (65)
    on left: 64 65, on right: 60
actuals_list (66)
    on left: 66 67, on right: 65 67


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (decls)

    program  go to state 1
    decls    go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: decls . EOF
    3 decls: decls . vdecl
    4      | decls . fdecl

    INT      shift, and go to state 4
    FLOAT    shift, and go to state 5
    BOOL     shift, and go to state 6
    VOID     shift, and go to state 7
    STRING   shift, and go to state 8
    COLOR    shift, and go to state 9
    CLUSTER  shift, and go to state 10
    EOF      shift, and go to state 11

    fdecl  go to state 12
    typ    go to state 13
    vdecl  go to state 14


state 3

    0 $accept: program $end .

    $default  accept


state 4

   10 typ: INT .

    $default  reduce using rule 10 (typ)


state 5

   11 typ: FLOAT .

    $default  reduce using rule 11 (typ)


state 6

   12 typ: BOOL .

    $default  reduce using rule 12 (typ)


state 7

   13 typ: VOID .

    $default  reduce using rule 13 (typ)


state 8

   14 typ: STRING .

    $default  reduce using rule 14 (typ)


state 9

   16 typ: COLOR .

    $default  reduce using rule 16 (typ)


state 10

   15 typ: CLUSTER .

    $default  reduce using rule 15 (typ)


state 11

    1 program: decls EOF .

    $default  reduce using rule 1 (program)


state 12

    4 decls: decls fdecl .

    $default  reduce using rule 4 (decls)


state 13

    5 fdecl: typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE
   17 typ: typ . LBRACKET RBRACKET
   20 vdecl: typ . ID SEMI

    LBRACKET  shift, and go to state 15
    ID        shift, and go to state 16


state 14

    3 decls: decls vdecl .

    $default  reduce using rule 3 (decls)


state 15

   17 typ: typ LBRACKET . RBRACKET

    RBRACKET  shift, and go to state 17


state 16

    5 fdecl: typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE
   20 vdecl: typ ID . SEMI

    SEMI    shift, and go to state 18
    LPAREN  shift, and go to state 19


state 17

   17 typ: typ LBRACKET RBRACKET .

    $default  reduce using rule 17 (typ)


state 18

   20 vdecl: typ ID SEMI .

    $default  reduce using rule 20 (vdecl)


state 19

    5 fdecl: typ ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

    INT      shift, and go to state 4
    FLOAT    shift, and go to state 5
    BOOL     shift, and go to state 6
    VOID     shift, and go to state 7
    STRING   shift, and go to state 8
    COLOR    shift, and go to state 9
    CLUSTER  shift, and go to state 10

    $default  reduce using rule 6 (formals_opt)

    formals_opt  go to state 20
    formal_list  go to state 21
    typ          go to state 22


state 20

    5 fdecl: typ ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE

    RPAREN  shift, and go to state 23


state 21

    7 formals_opt: formal_list .
    9 formal_list: formal_list . COMMA typ ID

    COMMA  shift, and go to state 24

    $default  reduce using rule 7 (formals_opt)


state 22

    8 formal_list: typ . ID
   17 typ: typ . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 15
    ID        shift, and go to state 25


state 23

    5 fdecl: typ ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE

    LBRACE  shift, and go to state 26


state 24

    9 formal_list: formal_list COMMA . typ ID

    INT      shift, and go to state 4
    FLOAT    shift, and go to state 5
    BOOL     shift, and go to state 6
    VOID     shift, and go to state 7
    STRING   shift, and go to state 8
    COLOR    shift, and go to state 9
    CLUSTER  shift, and go to state 10

    typ  go to state 27


state 25

    8 formal_list: typ ID .

    $default  reduce using rule 8 (formal_list)


state 26

    5 fdecl: typ ID LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE

    $default  reduce using rule 18 (vdecl_list)

    vdecl_list  go to state 28


state 27

    9 formal_list: formal_list COMMA typ . ID
   17 typ: typ . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 15
    ID        shift, and go to state 29


state 28

    5 fdecl: typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE
   19 vdecl_list: vdecl_list . vdecl

    INT      shift, and go to state 4
    FLOAT    shift, and go to state 5
    BOOL     shift, and go to state 6
    VOID     shift, and go to state 7
    STRING   shift, and go to state 8
    COLOR    shift, and go to state 9
    CLUSTER  shift, and go to state 10

    $default  reduce using rule 21 (stmt_list)

    typ        go to state 30
    vdecl      go to state 31
    stmt_list  go to state 32


state 29

    9 formal_list: formal_list COMMA typ ID .

    $default  reduce using rule 9 (formal_list)


state 30

   17 typ: typ . LBRACKET RBRACKET
   20 vdecl: typ . ID SEMI

    LBRACKET  shift, and go to state 15
    ID        shift, and go to state 33


state 31

   19 vdecl_list: vdecl_list vdecl .

    $default  reduce using rule 19 (vdecl_list)


state 32

    5 fdecl: typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE
   22 stmt_list: stmt_list . stmt

    LPAREN     shift, and go to state 34
    LBRACE     shift, and go to state 35
    RBRACE     shift, and go to state 36
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    RETURN     shift, and go to state 41
    IF         shift, and go to state 42
    FOR        shift, and go to state 43
    WHILE      shift, and go to state 44
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    stmt  go to state 51
    expr  go to state 52


state 33

   20 vdecl: typ ID . SEMI

    SEMI  shift, and go to state 18


state 34

   61 expr: LPAREN . expr RPAREN

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 53


state 35

   26 stmt: LBRACE . stmt_list RBRACE

    $default  reduce using rule 21 (stmt_list)

    stmt_list  go to state 54


state 36

    5 fdecl: typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE .

    $default  reduce using rule 5 (fdecl)


state 37

   56 expr: MINUS . expr

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 55


state 38

   57 expr: NOT . expr

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 56


state 39

   35 expr: TRUE .

    $default  reduce using rule 35 (expr)


state 40

   36 expr: FALSE .

    $default  reduce using rule 36 (expr)


state 41

   24 stmt: RETURN . SEMI
   25     | RETURN . expr SEMI

    SEMI       shift, and go to state 57
    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 58


state 42

   27 stmt: IF . LPAREN expr RPAREN stmt
   28     | IF . LPAREN expr RPAREN stmt ELSE stmt

    LPAREN  shift, and go to state 59


state 43

   29 stmt: FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt

    LPAREN  shift, and go to state 60


state 44

   30 stmt: WHILE . LPAREN expr RPAREN stmt

    LPAREN  shift, and go to state 61


state 45

   38 expr: DOLLAR . expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr DOLLAR

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 62


state 46

   37 expr: POUND . expr COMMA expr COMMA expr POUND

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 63


state 47

   33 expr: LITERAL .

    $default  reduce using rule 33 (expr)


state 48

   40 expr: ID .
   58     | ID . ASSIGN NEW typ LBRACKET expr RBRACKET
   59     | ID . ASSIGN expr
   60     | ID . LPAREN actuals_opt RPAREN
   62     | ID . LBRACKET expr RBRACKET ASSIGN expr
   63     | ID . LBRACKET expr RBRACKET

    LPAREN    shift, and go to state 64
    ASSIGN    shift, and go to state 65
    LBRACKET  shift, and go to state 66

    $default  reduce using rule 40 (expr)


state 49

   41 expr: FLOATLIT .

    $default  reduce using rule 41 (expr)


state 50

   34 expr: STRINGLIT .

    $default  reduce using rule 34 (expr)


state 51

   22 stmt_list: stmt_list stmt .

    $default  reduce using rule 22 (stmt_list)


state 52

   23 stmt: expr . SEMI
   39 expr: expr . AT expr
   42     | expr . PLUS expr
   43     | expr . MINUS expr
   44     | expr . TIMES expr
   45     | expr . DIVIDE expr
   46     | expr . EQ expr
   47     | expr . NEQ expr
   48     | expr . LT expr
   49     | expr . LEQ expr
   50     | expr . GT expr
   51     | expr . GEQ expr
   52     | expr . AND expr
   53     | expr . OR expr
   54     | expr . DOT ID
   55     | expr . DOT ID ASSIGN expr

    SEMI    shift, and go to state 67
    PLUS    shift, and go to state 68
    MINUS   shift, and go to state 69
    TIMES   shift, and go to state 70
    DIVIDE  shift, and go to state 71
    EQ      shift, and go to state 72
    NEQ     shift, and go to state 73
    LT      shift, and go to state 74
    LEQ     shift, and go to state 75
    GT      shift, and go to state 76
    GEQ     shift, and go to state 77
    AND     shift, and go to state 78
    OR      shift, and go to state 79
    DOT     shift, and go to state 80
    AT      shift, and go to state 81


state 53

   39 expr: expr . AT expr
   42     | expr . PLUS expr
   43     | expr . MINUS expr
   44     | expr . TIMES expr
   45     | expr . DIVIDE expr
   46     | expr . EQ expr
   47     | expr . NEQ expr
   48     | expr . LT expr
   49     | expr . LEQ expr
   50     | expr . GT expr
   51     | expr . GEQ expr
   52     | expr . AND expr
   53     | expr . OR expr
   54     | expr . DOT ID
   55     | expr . DOT ID ASSIGN expr
   61     | LPAREN expr . RPAREN

    RPAREN  shift, and go to state 82
    PLUS    shift, and go to state 68
    MINUS   shift, and go to state 69
    TIMES   shift, and go to state 70
    DIVIDE  shift, and go to state 71
    EQ      shift, and go to state 72
    NEQ     shift, and go to state 73
    LT      shift, and go to state 74
    LEQ     shift, and go to state 75
    GT      shift, and go to state 76
    GEQ     shift, and go to state 77
    AND     shift, and go to state 78
    OR      shift, and go to state 79
    DOT     shift, and go to state 80
    AT      shift, and go to state 81


state 54

   22 stmt_list: stmt_list . stmt
   26 stmt: LBRACE stmt_list . RBRACE

    LPAREN     shift, and go to state 34
    LBRACE     shift, and go to state 35
    RBRACE     shift, and go to state 83
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    RETURN     shift, and go to state 41
    IF         shift, and go to state 42
    FOR        shift, and go to state 43
    WHILE      shift, and go to state 44
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    stmt  go to state 51
    expr  go to state 52


state 55

   39 expr: expr . AT expr
   42     | expr . PLUS expr
   43     | expr . MINUS expr
   44     | expr . TIMES expr
   45     | expr . DIVIDE expr
   46     | expr . EQ expr
   47     | expr . NEQ expr
   48     | expr . LT expr
   49     | expr . LEQ expr
   50     | expr . GT expr
   51     | expr . GEQ expr
   52     | expr . AND expr
   53     | expr . OR expr
   54     | expr . DOT ID
   55     | expr . DOT ID ASSIGN expr
   56     | MINUS expr .

    GEQ  shift, and go to state 77
    DOT  shift, and go to state 80

    GEQ       [reduce using rule 56 (expr)]
    $default  reduce using rule 56 (expr)


state 56

   39 expr: expr . AT expr
   42     | expr . PLUS expr
   43     | expr . MINUS expr
   44     | expr . TIMES expr
   45     | expr . DIVIDE expr
   46     | expr . EQ expr
   47     | expr . NEQ expr
   48     | expr . LT expr
   49     | expr . LEQ expr
   50     | expr . GT expr
   51     | expr . GEQ expr
   52     | expr . AND expr
   53     | expr . OR expr
   54     | expr . DOT ID
   55     | expr . DOT ID ASSIGN expr
   57     | NOT expr .

    GEQ  shift, and go to state 77
    DOT  shift, and go to state 80

    GEQ       [reduce using rule 57 (expr)]
    $default  reduce using rule 57 (expr)


state 57

   24 stmt: RETURN SEMI .

    $default  reduce using rule 24 (stmt)


state 58

   25 stmt: RETURN expr . SEMI
   39 expr: expr . AT expr
   42     | expr . PLUS expr
   43     | expr . MINUS expr
   44     | expr . TIMES expr
   45     | expr . DIVIDE expr
   46     | expr . EQ expr
   47     | expr . NEQ expr
   48     | expr . LT expr
   49     | expr . LEQ expr
   50     | expr . GT expr
   51     | expr . GEQ expr
   52     | expr . AND expr
   53     | expr . OR expr
   54     | expr . DOT ID
   55     | expr . DOT ID ASSIGN expr

    SEMI    shift, and go to state 84
    PLUS    shift, and go to state 68
    MINUS   shift, and go to state 69
    TIMES   shift, and go to state 70
    DIVIDE  shift, and go to state 71
    EQ      shift, and go to state 72
    NEQ     shift, and go to state 73
    LT      shift, and go to state 74
    LEQ     shift, and go to state 75
    GT      shift, and go to state 76
    GEQ     shift, and go to state 77
    AND     shift, and go to state 78
    OR      shift, and go to state 79
    DOT     shift, and go to state 80
    AT      shift, and go to state 81


state 59

   27 stmt: IF LPAREN . expr RPAREN stmt
   28     | IF LPAREN . expr RPAREN stmt ELSE stmt

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 85


state 60

   29 stmt: FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    $default  reduce using rule 31 (expr_opt)

    expr_opt  go to state 86
    expr      go to state 87


state 61

   30 stmt: WHILE LPAREN . expr RPAREN stmt

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 88


state 62

   38 expr: DOLLAR expr . COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr DOLLAR
   39     | expr . AT expr
   42     | expr . PLUS expr
   43     | expr . MINUS expr
   44     | expr . TIMES expr
   45     | expr . DIVIDE expr
   46     | expr . EQ expr
   47     | expr . NEQ expr
   48     | expr . LT expr
   49     | expr . LEQ expr
   50     | expr . GT expr
   51     | expr . GEQ expr
   52     | expr . AND expr
   53     | expr . OR expr
   54     | expr . DOT ID
   55     | expr . DOT ID ASSIGN expr

    COMMA   shift, and go to state 89
    PLUS    shift, and go to state 68
    MINUS   shift, and go to state 69
    TIMES   shift, and go to state 70
    DIVIDE  shift, and go to state 71
    EQ      shift, and go to state 72
    NEQ     shift, and go to state 73
    LT      shift, and go to state 74
    LEQ     shift, and go to state 75
    GT      shift, and go to state 76
    GEQ     shift, and go to state 77
    AND     shift, and go to state 78
    OR      shift, and go to state 79
    DOT     shift, and go to state 80
    AT      shift, and go to state 81


state 63

   37 expr: POUND expr . COMMA expr COMMA expr POUND
   39     | expr . AT expr
   42     | expr . PLUS expr
   43     | expr . MINUS expr
   44     | expr . TIMES expr
   45     | expr . DIVIDE expr
   46     | expr . EQ expr
   47     | expr . NEQ expr
   48     | expr . LT expr
   49     | expr . LEQ expr
   50     | expr . GT expr
   51     | expr . GEQ expr
   52     | expr . AND expr
   53     | expr . OR expr
   54     | expr . DOT ID
   55     | expr . DOT ID ASSIGN expr

    COMMA   shift, and go to state 90
    PLUS    shift, and go to state 68
    MINUS   shift, and go to state 69
    TIMES   shift, and go to state 70
    DIVIDE  shift, and go to state 71
    EQ      shift, and go to state 72
    NEQ     shift, and go to state 73
    LT      shift, and go to state 74
    LEQ     shift, and go to state 75
    GT      shift, and go to state 76
    GEQ     shift, and go to state 77
    AND     shift, and go to state 78
    OR      shift, and go to state 79
    DOT     shift, and go to state 80
    AT      shift, and go to state 81


state 64

   60 expr: ID LPAREN . actuals_opt RPAREN

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    $default  reduce using rule 64 (actuals_opt)

    expr          go to state 91
    actuals_opt   go to state 92
    actuals_list  go to state 93


state 65

   58 expr: ID ASSIGN . NEW typ LBRACKET expr RBRACKET
   59     | ID ASSIGN . expr

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    NEW        shift, and go to state 94
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 95


state 66

   62 expr: ID LBRACKET . expr RBRACKET ASSIGN expr
   63     | ID LBRACKET . expr RBRACKET

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 96


state 67

   23 stmt: expr SEMI .

    $default  reduce using rule 23 (stmt)


state 68

   42 expr: expr PLUS . expr

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 97


state 69

   43 expr: expr MINUS . expr

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 98


state 70

   44 expr: expr TIMES . expr

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 99


state 71

   45 expr: expr DIVIDE . expr

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 100


state 72

   46 expr: expr EQ . expr

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 101


state 73

   47 expr: expr NEQ . expr

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 102


state 74

   48 expr: expr LT . expr

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 103


state 75

   49 expr: expr LEQ . expr

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 104


state 76

   50 expr: expr GT . expr

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 105


state 77

   51 expr: expr GEQ . expr

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 106


state 78

   52 expr: expr AND . expr

    LPAREN     shift, and go to state 34
    MINUS      shift, and go to state 37
    NOT        shift, and go to state 38
    TRUE       shift, and go to state 39
    FALSE      shift, and go to state 40
    DOLLAR     shift, and go to state 45
    POUND      shift, and go to state 46
    LITERAL    shift, and go to state 47
    ID         shift, and go to state 48
    FLOATLIT   shift, and go to state 49
    STRINGLIT  shift, and go to state 50

    expr  go to state 107


state 79

   53 expr: expr OR . expr
